fix large text on small screen

--- a/_src/_includes/_assets/css/core.css
+++ b/_src/_includes/_assets/css/core.css
@@ -878,8 +878,10 @@ a.toc-link { text-decoration: none; }
 
 }
 
-@media (max-width: 350px) {
-
+@media (max-width: 390px) {
+  #intro_heading {
+    font-size: 42px;
+  }
 }
 
 @media (max-width: 300px) {
